# rs97_st-sdl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README  README.md  build-all.sh  build-host.sh  build.sh  config.def.h  config.h  config_rs97.mk  font.c  keyboard.c  keyboard.h  package-opk.sh  sdl_test.c  st.c
.github/workflows/: opendingux_release.yml
CMake/: retrofw_defs.cmake  rg350_defs.cmake  rg99_defs.cmake
opkg/: default.gcw0.desktop  default.lepus.desktop  default.retrofw.desktop  default.rg99.desktop  readme.gcw0.txt  readme.retrofw.txt  st.sh
